# Code365

./: README.md
Glib/demo/: glib_async_queue  glib_atomic  glib_hash  glib_main_loop1  glib_main_loop1.c  glib_main_loop2  glib_test1
Note/: android_audio
alsa/: Makefile  ReadMe  sound  sound_if.c  sound_main.c
alsa/config/: default  usb_sound
alsa/include/: sound_if.h
any_demo/: linux_thread_demo.c  linux_time_demo.c  windows_thread_demo.c
cmake/json_tool/: CMakeLists.txt  README.md
debugHacks/: sum  sum.c  sum.dump  sum.raw.dump  sum.s
factory_refactor/: HWConfig.cpp  HWConfig.h  Makefile  SoundTest.cpp  SoundTest.h  config_test.cpp  objdump.S  test.out
list/: Makefile  example.c  list.c  list.h
pulseAudio/: Makefile  audiocore.cc  audiocore.h  audiomanager.cc  audiomanager.h  card.cc  card.h  cardwidget.cc  cardwidget.h  device.cc  devicewidget.cc  devicewidget.h  mainwindow.cc  mainwindow.h  pavucontrol.cc  pavucontrol.h  sink.cc  sink.h  sinkinputwidget.cc  sinkinputwidget.h  sinkwidget.cc  sinkwidget.h  source.h  sourceoutput.cc  sourceoutputwidget.cc  sourceoutputwidget.h  sourcewidget.cc  sourcewidget.h  test  test.cc  test.out
rjcore_linux/: Makefile  README.md  Rules.mak  commit_check.sh  env.mak  main.mak  platform.mak
script/: Base  harddiskInfo
term-autotest/: Makefile  common.h  hard_codec.c  hard_codec.h  jpg_bmp.c  jpg_bmp.h  main.c  soft_codec.c  soft_codec.h  utils.c  utils.h
test_rjcore/: idle  resTest.c  sysabslayer_linux.h  sysrjcore_linux.h  test  test_control.c  x_idle_test.c  xset_test.c
tiny4412/: README
(+332 files in other folders)
